# langgraph-demo

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
src/: agentic_bot.py  simple_bot.py
